[gd_scene load_steps=19 format=2]

[ext_resource path="res://ASSETS/Art/backgroundTitle2.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/Fonts/BlockyFont.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://ASSETS/Menus/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/Art/crab.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/Art/gnome.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/Audio/chuckles/chuckle2.mp3" type="AudioStream" id=6]
[ext_resource path="res://ASSETS/Audio/Saw Hits Gnome.mp3" type="AudioStream" id=7]
[ext_resource path="res://ASSETS/Audio/MenuNoises/ClickCool.wav" type="AudioStream" id=8]
[ext_resource path="res://ASSETS/Audio/MenuNoises/paper1.mp3" type="AudioStream" id=9]
[ext_resource path="res://ASSETS/Audio/MenuNoises/InTheHallOfTheMountainGnome.mp3" type="AudioStream" id=10]
[ext_resource path="res://ASSETS/Menus/OptionsMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://ASSETS/Menus/Transition.tscn" type="PackedScene" id=12]
[ext_resource path="res://ASSETS/Audio/GnomeYelling.mp3" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 3
outline_color = Color( 0.34902, 0.784314, 0.321569, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0.360784, 0, 1, 1 )
extra_spacing_top = 7
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 21
outline_size = 1
outline_color = Color( 0, 0.835294, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 17
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 14
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.773438, 0.98938, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="GST" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -425.5
margin_top = 106.0
margin_right = 425.5
margin_bottom = 182.0
rect_pivot_offset = Vector2( 275, 35 )
hint_tooltip = "Try To Die!"
mouse_filter = 1
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "GNOME SAFETY TESTER"

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -94.0
margin_right = 88.5
margin_bottom = -54.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 88, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.360784, 0, 1, 1 )
custom_colors/font_color = Color( 0.34902, 0.784314, 0.321569, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="Options" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -20.0
margin_right = 88.5
margin_bottom = 20.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 88, 0 )
hint_tooltip = "Fullscreen/Level Select"
mouse_default_cursor_shape = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.360784, 0, 1, 1 )
custom_colors/font_color = Color( 0.34902, 0.784314, 0.321569, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = 54.0
margin_right = 88.5
margin_bottom = 94.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 88, 0 )
mouse_default_cursor_shape = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.360784, 0, 1, 1 )
custom_colors/font_color = Color( 0.34902, 0.784314, 0.321569, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "EXIT"

[node name="LightningProduction" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -66.0
margin_right = 360.0
margin_bottom = -7.0
rect_pivot_offset = Vector2( 275, 35 )
hint_tooltip = "Produced By Zechariah Chandler, Cristopher French, James Stiles, and Mark Wooten"
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.960784, 0.4, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "A Lightning Production"
align = 1
valign = 1

[node name="CrabParticles" type="CPUParticles2D" parent="."]
position = Vector2( 638, -43 )
amount = 10
lifetime = 5.0
preprocess = 10.0
randomness = 0.11
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 650, 10 )
spread = 78.0
radial_accel = 15.79
radial_accel_random = 0.75
tangential_accel = 8.78
tangential_accel_random = 0.17
angle = 30.0
angle_random = 1.0
scale_amount = 0.88

[node name="RobParticles" type="CPUParticles2D" parent="."]
position = Vector2( 638, -43 )
amount = 10
lifetime = 5.0
preprocess = 10.0
randomness = 0.11
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 650, 10 )
spread = 177.47
gravity = Vector2( 0, 50 )
angular_velocity = 12.63
angular_velocity_random = 1.0
radial_accel = 15.79
radial_accel_random = 0.75
tangential_accel = 8.78
tangential_accel_random = 0.17
angle = 30.0
angle_random = 1.0
scale_amount = 0.05

[node name="GiggleStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ExitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -16.957

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="paper" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="GameInfo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = 152.0
margin_right = 250.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 210, 0 )
custom_colors/font_color_shadow = Color( 0.168627, 0.403922, 0.905882, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 4 )
text = "Robert the Gnome is on a mission to test the safety of various scenes. Robert's employers use his mysterious gnome abilities to test and fix scenes by any means necessary."
align = 1
valign = 1
autowrap = true

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="OptionsMenu" type="CanvasLayer" parent="."]

[node name="OptionsMenu" parent="OptionsMenu" instance=ExtResource( 11 )]
visible = false

[node name="TransiLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Transitions" parent="TransiLayer" instance=ExtResource( 12 )]
mouse_filter = 2

[node name="DeathScream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -445.0
margin_top = 9.0
margin_right = -14.0
margin_bottom = 81.0
hint_tooltip = "Thanks Dylan :D"
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "MainScreen Soundtrack custom made 
by MakeMakeGongGong on Soundcloud
\"In the Hall of the Mountain Gnome\""
align = 1

[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
